templates/sample-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-application
  namespace: dev
  labels:
    app: sample-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-application
  template:
    metadata:
      labels:
        app: sample-application
    spec:
      containers:
      - name: sample-application
        image: docker.io/jadhav957/samplejava:latest
        ports:
        - containerPort: 8080
