templates/sample-app-service.yaml
# Deploy ClusterIP Services
apiVersion: v1
kind: Service
metadata:
  name: sample-application-service
  labels:
    app: sample-application

spec:
  selector:
    app: sample-application

  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
