templates/sample-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-application
spec:
  rules:
  - host: dev.testjava.infinityfreeapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sample-application-service
            port:
              number: 8080
  ingressClassName: nginx
